Revert "Revert "Search Tool Corrections Pdf View Z-index, Filter Panel Z-Index, Paginator fixes""
This reverts commit 9b6ac4ea1496f5cefb4aa1b71c78c278847b2276.

--- a/enersectapp/static/enersectapp/search_tool.css
+++ b/enersectapp/static/enersectapp/search_tool.css
@@ -20,7 +20,7 @@
     height:100%;
 	margin:0 auto;
     
-    z-index:500;
+    z-index:100;
     pointer-events:all;
 }
 
@@ -742,7 +742,7 @@ object {
     left: 15%;
     height: 40%;
     width: 50%;
-    z-index: 20;
+    z-index: 700;
     text-align: center;
     
     pointer-events:all;
